opensource/mssql/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
  labels:
    app: mssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2025-latest
        ports:
        - containerPort: 1433
        resources:
          requests:
#            cpu: '500m'
            memory: '1Gi'
          limits:
#            cpu: '500m'
            memory: '2Gi'
        volumeMounts:
        - name: mssql-data
          mountPath: /var/opt/mssql/data
        - name: mssql-log
          mountPath: /var/opt/mssql/log
        - name: mssql-secrets
          mountPath: /var/opt/mssql/secrets
        securityContext:
          privileged: true
#          allowPrivilegeEscalation: false
          runAsUser: 0
      volumes:
      - name: mssql-data
        persistentVolumeClaim:
          claimName: mssql-data-pvc
      - name: mssql-log
        persistentVolumeClaim:
          claimName: mssql-log-pvc
      - name: mssql-secrets
        persistentVolumeClaim:
          claimName: mssql-secrets-pvc
