opensource/mssql/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mssql-ingress
spec:
  rules:
  - host: mssql.bluesky.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mssql-service
            port:
              number: 1433
